; ModuleID = '/home/carl/AnghaBench/ZipArchive/SSZipArchive/minizip/extr_mz_zip.c_mz_zip_extrafield_read.c'
source_filename = "/home/carl/AnghaBench/ZipArchive/SSZipArchive/minizip/extr_mz_zip.c_mz_zip_extrafield_read.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MZ_OK = common dso_local global i64 0, align 8
@MZ_PARAM_ERROR = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @mz_zip_extrafield_read(i8* %0, i32* %1, i32* %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i64, align 8
  store i8* %0, i8** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32* %2, i32** %7, align 8
  %9 = load i64, i64* @MZ_OK, align 8
  store i64 %9, i64* %8, align 8
  %10 = load i32*, i32** %6, align 8
  %11 = icmp eq i32* %10, null
  br i1 %11, label %15, label %12

12:                                               ; preds = %3
  %13 = load i32*, i32** %7, align 8
  %14 = icmp eq i32* %13, null
  br i1 %14, label %15, label %17

15:                                               ; preds = %12, %3
  %16 = load i64, i64* @MZ_PARAM_ERROR, align 8
  store i64 %16, i64* %4, align 8
  br label %30

17:                                               ; preds = %12
  %18 = load i8*, i8** %5, align 8
  %19 = load i32*, i32** %6, align 8
  %20 = call i64 @mz_stream_read_uint16(i8* %18, i32* %19)
  store i64 %20, i64* %8, align 8
  %21 = load i64, i64* %8, align 8
  %22 = load i64, i64* @MZ_OK, align 8
  %23 = icmp eq i64 %21, %22
  br i1 %23, label %24, label %28

24:                                               ; preds = %17
  %25 = load i8*, i8** %5, align 8
  %26 = load i32*, i32** %7, align 8
  %27 = call i64 @mz_stream_read_uint16(i8* %25, i32* %26)
  store i64 %27, i64* %8, align 8
  br label %28

28:                                               ; preds = %24, %17
  %29 = load i64, i64* %8, align 8
  store i64 %29, i64* %4, align 8
  br label %30

30:                                               ; preds = %28, %15
  %31 = load i64, i64* %4, align 8
  ret i64 %31
}

declare dso_local i64 @mz_stream_read_uint16(i8*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
